Revision history for JSON-Schema-Modern

{{$NEXT}}
          - documentation notes added for which definitions can be overridden
            (formats, media-types and encodings can; vocabularies cannot).

0.615     2025-07-12 16:12:36Z
          - do not allow the use of builtin bools when Storable is too old to
            know how to serialize them
          - avoid experimental warnings in tests from perl versions 5.36.0 to
            5.40.0

0.614     2025-06-28 18:51:12Z
          - revert to using JSON::PP booleans for now

0.613     2025-06-28 18:07:20Z
          - now checking for keyword collisions in custom vocabulary classes
          - now using builtin booleans when available (requires perl 5.36 and
            Cpanel::JSON::XS 4.38); reverted in 0.614

0.612     2025-06-03 22:50:17Z
          - additional diagnostics to track down some edge case failures

0.611     2025-05-31 03:38:55Z
          - fix integer vs number distinction in draft4 for x.0 values. This
            comes at the expense of properly identifying other numbers as
            integers in draft4 instead of numbers, e.g. 2e1 as a json literal,
            as these all decode to Math::BigFloat objects.
          - some fixes to id/$id validity checks across all drafts

0.610     2025-05-16 20:58:28Z
          - evaluate() and evaluate_json_string() can no longer be called with
            a JSON::Schema::Modern::Document object; now you should only pass
            in the desired URI directly (or the raw schema), as before.
          - fixed some issues when evaluating a schema that had a base URI
            added to it after the document was created, including selecting
            the proper base URI to use in error messages when there are
            multiple choices

0.609     2025-04-20 23:40:09Z
          - validate_schema() (and the json-schema-eval --validate-schema
            option) now detect more errors

0.608     2025-04-11 20:57:16Z